tests/baselines/reference/thisPropertyAssignment.errors.txt
tests/cases/conformance/salsa/a.js(9,8): error TS2339: Property 'y' does not exist on type '{}'.
tests/cases/conformance/salsa/a.js(11,1): error TS7053: Element implicitly has an 'any' type because expression of type '"y"' can't be used to index type '{}'.
  Property 'y' does not exist on type '{}'.


==== tests/cases/conformance/salsa/a.js (2 errors) ====
    // This test is asserting that a single property/element access
    // on `this` is a special assignment declaration, but chaining
    // off that does not create additional declarations. I’m not sure
    // if it needs to be that way in JavaScript; the test simply
    // ensures no accidental changes were introduced while allowing
    // element access assignments to create declarations.
    
    this.x = {};
    this.x.y = {};
           ~
!!! error TS2339: Property 'y' does not exist on type '{}'.
    this["x"] = {};
    this["x"]["y"] = {};
    ~~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"y"' can't be used to index type '{}'.
!!! error TS7053:   Property 'y' does not exist on type '{}'.
    